[package]
name = "ilearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
num-traits = "0.2.18"
num-derive = "0.4.2"
num_enum = "0.7.2"
thread_local = "1.1.8"
tokio = { version = "1.38.0", features = ["full"] }
